--- a/style.css
+++ b/style.css
@@ -2,12 +2,60 @@
    margin: 0px; 
     padding: 0px;
 }
+h1{
+    font-size: 30px;
+    padding: 10px;
+}
 .fundo{
-    background-image: linear-gradient(45deg,rgb(0, 0, 101), rgb(40, 40, 40));
-    height: 100%;
+    text-align: center;
+    background-color: black;
+    background-image: linear-gradient(135deg,rgba(0, 0, 100, 0.7), rgba(40, 40, 40, 0.7));
+    height: 100vh;
     color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    backdrop-filter: blur(50px);
 }
 .calculadora{
-    color: white;
+    position: absolute;
+    height: auto;
+    width: auto;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     background-color: rgba(0, 0, 0, 0.50);
+    border-radius: 15px;
+    padding: 15px;
+}
+button{
+    width: 50px;
+    height: 50px;
+    background-color: rgba(35, 35, 35, 0.804);
+    color: rgb(225, 225, 225);
+    border: none;
+    padding: 10px;
+    margin: 3px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 20px;
+}
+button:hover{
+    background-color: rgba(24, 28, 29, 0.550);
+    border: solid 1px white;
+}
+.act{
+    font-weight: bold; 
+    color: rgb(0, 0, 255);
+}
+p{
+    width: 200px;
+    position: absolute;
+    background-color: white;
+    font-size: 25px;
+    padding: 10px;
+    margin: 5px;
+    color: black;
+    text-align: right;
+}
+table{
+    margin-top: 80px;
 }
