--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 *{
    margin: 0px; 
     padding: 0px;
@@ -6,10 +7,14 @@ h1{
     font-size: 30px;
     padding: 10px;
 }
+body{
+    background-image: url('background.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+}
 .fundo{
     text-align: center;
-    background-color: black;
-    background-image: linear-gradient(135deg,rgba(0, 0, 100, 0.7), rgba(40, 40, 40, 0.7));
+    background-color: rgba(0, 0, 0, 0.3);
     height: 100vh;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
@@ -25,6 +30,7 @@ h1{
     background-color: rgba(0, 0, 0, 0.50);
     border-radius: 15px;
     padding: 15px;
+    box-shadow: 0 3px 5px 5px rgba(255, 255, 255, 0.2);
 }
 button{
     width: 50px;
@@ -47,6 +53,7 @@ button:hover{
     color: rgb(0, 0, 255);
 }
 p{
+    height: 28.80px;
     width: 200px;
     position: absolute;
     background-color: white;
@@ -55,6 +62,7 @@ p{
     margin: 5px;
     color: black;
     text-align: right;
+    align-items: center;
 }
 table{
     margin-top: 80px;
