--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 }
 .fundo{
     text-align: center;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-image:linear-gradient(0deg,rgba(0, 0, 0, 0.1),rgba(255, 255, 255, 0.1)) ;
     height: 100vh;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
@@ -27,9 +27,21 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: rgba(0, 0, 0, 0.70);
+    background-color: rgba(0, 0, 0, 0.80);
     border-radius: 15px;
     padding: 15px;
+}
+.bcalculadora{
+    position: absolute;
+    height: 399px;
+    width: 262px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-image: linear-gradient(235deg,rgba(255, 255, 255, 0.2),rgba(0, 0, 0, 0.8),
+    rgba(1, 1, 255, 0.4),rgba(0, 0, 0, 1),rgba(0, 0, 0, 0.8));
+    border-radius: 15px;
+    padding: 2px;
     box-shadow: 0 3px 5px 5px rgba(255, 255, 255, 0.2);
 }
 button{
