--- a/style.css
+++ b/style.css
@@ -8,14 +8,14 @@ h1{
     padding: 10px;
 }
 body{
+    height: 100vh;
+    width: 100vw;
+    background-color:linear-gradient(0deg,rgba(0, 0, 0, 0.1),rgba(255, 255, 255, 0.1)) ;
     background-image: url('background.jpg');
+    background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
-}
-.fundo{
     text-align: center;
-    background-image:linear-gradient(0deg,rgba(0, 0, 0, 0.1),rgba(255, 255, 255, 0.1)) ;
-    height: 100vh;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     backdrop-filter: blur(50px);
@@ -39,7 +39,7 @@ body{
     left: 50%;
     transform: translate(-50%, -50%);
     background-image: linear-gradient(235deg,rgba(255, 255, 255, 0.2),rgba(0, 0, 0, 0.8),
-    rgba(1, 1, 255, 0.4),rgba(0, 0, 0, 1),rgba(0, 0, 0, 0.8));
+    rgba(1, 69, 255, 0.4),rgba(0, 0, 0, 1),rgba(0, 0, 0, 0.8));
     border-radius: 15px;
     padding: 2px;
     box-shadow: 0 3px 5px 5px rgba(255, 255, 255, 0.2);
