--- a/style.css
+++ b/style.css
@@ -10,15 +10,15 @@ h1{
 body{
     height: 100vh;
     width: 100vw;
-    background-color:linear-gradient(0deg,rgba(0, 0, 0, 0.1),rgba(255, 255, 255, 0.1)) ;
+    background-color:rgba(0, 0, 0, 0.8);
     background-image: url('background.jpg');
+    backdrop-filter: blur(50px);
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
     text-align: center;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    backdrop-filter: blur(50px);
 }
 .calculadora{
     position: absolute;
