--- a/style.css
+++ b/style.css
@@ -3,11 +3,14 @@
    margin: 0px; 
     padding: 0px;
 }
-h1{
+header{
+    
     font-size: 30px;
     padding: 10px;
 }
 body{
+    display: flex;
+    flex-direction: column;
     height: 100vh;
     width: 100vw;
     background-color:rgba(0, 0, 0, 0.8);
@@ -19,6 +22,15 @@ body{
     text-align: center;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
+}
+main{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
 }
 .calculadora{
     position: absolute;
