--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body{
     text-align: center;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
+    animation: gradient2 0.5s ease-out forwards;
 }
 main{
     display: flex;
@@ -44,6 +45,7 @@ main{
     border-radius: 15px;
     padding: 2px;
     box-shadow: 0 3px 5px 5px rgba(255, 255, 255, 0.2);
+    animation: appear 0.7s ease-out;
 }
 .calculadora{
     position: absolute;
@@ -91,4 +93,27 @@ p{
 }
 table{
     margin-top: 80px;
+}
+
+@keyframes appear {
+    from {
+        opacity: 0;
+        translate: 0 -100%;
+    }
+
+    to {
+        opacity: 1;
+        translate: 0 0;
+    }
+}
+
+@keyframes gradient2 {
+    from {
+        background-position: left top;
+    }
+
+    to {
+        background-position: left bottom;
+        background-size: 100% 100%;
+    }
 }
